--- a/views/home.ejs
+++ b/views/home.ejs
@@ -123,7 +123,7 @@
             type="checkbox"
             id="input-checkbox"
             name="mailing-list"
-            value="checked"
+            value="yes"
           />
           <label class="label-field" for="input-checkbox"
             >Please add me to your mailing list</label
@@ -148,8 +148,11 @@
             >
           </p>
         </div>
-        <div>
+        <div class="btn-container">
           <button class="btn-submit" type="submit">Submit</button>
+          <a href="/admin/contacts">
+            <button class="btn-submit" type="button">Admin Page</button>
+          </a>
         </div>
       </form>
     </div>
